[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_walk_6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_run_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_run_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_run_3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_run_4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/German Shepherd/x3/Shepherd_run_5.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 22.348 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Enemy" type="Node2D"]
position = Vector2( 63.6028, 709.561 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -3.4128, -1.70641 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2.72687, 3.34155 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 2 )
animation = "walk"
frame = 5
playing = true

[node name="FlipTimer" type="Timer" parent="."]
autostart = true

[node name="WalkRunTimer" type="Timer" parent="."]
wait_time = 1.43
autostart = true
[connection signal="timeout" from="FlipTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WalkRunTimer" to="." method="_on_WalkRunTimer_timeout"]
